* Improved OSS headers detection a bit.

0.8.0
-------------------------------------------------------------------------
* Added workaround for crash in gtk-run with old libmenu-cache.
* Core functions are separated into a private library to allow reliable
    linking of modules using -Wl,-z,defs.
* Added macro LXPANEL_CHECK_VERSION() for third party pluguns API check.
* Added CONF_TYPE_EXTERNAL support for lxpanel_generic_config_dlg().
* Implemented property "aspect-width" for PanelIconGrid to allow using
    non-square tray sockets.
* Added support for monitors "All" to span panel over all monitors (i.e.
    to allow pre-0.6.0 behavior).
* Implemented monitors hotplug support.
* Fixed popups positioning in multi-monitor environment.
* Fixed updating panel size if appropriate monitor changed its size or
    position.
* Implemented disabling for "Reserve space" button if another monitor
    lies beyond the edge so reservation will cover it. Also reservation
    will not be applied in such cases even if set in config manually.
* Some edge and monitors selections in panel configuration dialog may be
    insensitive now if appropriate edge and monitor combination is not
    available, to avoid panels stacking one over another.
* Fixed bug with hidden panel disappearing after resolution change.
* Add lxpanel_image_new_for_icon() API to replace another (obsolete) API
    _gtk_image_new_from_file_scaled().
* Added API panel_config_hotkey_button_new() to use as CONF_TYPE_EXTERNAL
    widget to allow configure global hotkeys for plugins functions.
* Added API lxpanel_apply_hotkey() as a convenient libkeybinder interface
    to use in modules that also use panel_config_hotkey_button_new(). Now
    LXPanel requires libkeybinder too.
* Added API panel_config_click_button_new() to configure mouse gestures
    and panel_config_click_parse() to parse its output.
* Added "icon-size-changed" signal to LXPanel which is emitted when icons