@@ -1,4 +1,6 @@
 * Improved OSS headers detection a bit.
+* Fixed expand setting on plugins with default_expand when more than one
+    is available on the same panel.
 
 0.8.0
 -------------------------------------------------------------------------
